# cskelgengen

./: .bumpversion.cfg  .gitignore  README.md  mkskelgen
skeletons/capp/: .bumpversion.cfg  .gitignore  HEADER.bash  MANIFEST  Makefile  Makefile.in  NOTES.md  README.md  configure.ac  import.bash
skeletons/capp/src/: Makefile  errmsg.c  errmsg.h  fgetopt.c  fgetopt.h  linewrapper.c  linewrapper.h  main.c  main.h  options.c  options.h
skeletons/cclass/: .bumpversion.cfg  HEADER.bash  MANIFEST  Makefile  NOTES.md  README.md  TMPL_CLASS_NAME.c  TMPL_CLASS_NAME.h  doxygen.conf  stamper.bash
skeletons/cclass/ex/: ex_1.c
skeletons/cclass/t/: test.c
skeletons/copts/: HEADER.bash  MANIFEST  Makefile  TMPL_CLASS_NAME.c  TMPL_CLASS_NAME.h
skeletons/copts/examples/: ex1.c
skeletons/copts/t/: test.c  test01.c  test02.c
skeletons/ctools/: .bumpversion.cfg  HEADER.bash  MANIFEST  Makefile.in  NOTES.md  configure.ac  import.bash
skeletons/ctools/src/: Makefile  XXX-options.c  XXX-options.h  XXX_main.c  XXX_main.h  XXX_options.c  XXX_options.h  errmsg.h  foo_main.c  main.c  options.c  options.h
skeletons/cutils/: .bumpversion.cfg  HEADER.bash  MANIFEST  Makefile  NOTES.md  README.md  TMPL_CLASS_NAME.c  TMPL_CLASS_NAME.h  import.bash
skeletons/cutils/t/: test.c
